--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,14 +1,14 @@
-body{
-    padding: 50px 0;
+body{ 
+    padding: 50px 0; 
     position: relative;
     height: 100%;
     background-size: cover;
-    z-index: 1;
-    background-image: url(../images/slider-3-1920x1080.png);
+	z-index: 1;
+    background-image: url(../images/slider-3-1920x1080.png); 
     width: 100%; height: 100%;
     margin: 0;
     font-weight: 400;
-    word-wrap: break-word;
+    word-wrap: break-word; 
 }
 
 form{
@@ -16,8 +16,10 @@ form{
     font-family: cursive;
     font-size: 18;
     color: #ffffffff;
+    margin-top: 10%;
     margin-left: 38%;
     margin-right: 38%;
+    border-radius: 3px;
 }
 
 input[type=text], input[type=password]{
@@ -45,3 +47,4 @@ input[type=reset]{
     font-size: 20px;
     font-family: cursive;
 }
+
